--- a/amplify.yml
+++ b/amplify.yml
@@ -1,16 +1,10 @@
 version: 1
 frontend:
   phases:
-    preBuild:
+    postBuild:
       commands:
-        - npm install
-    build:
-      commands:
-        - npm run build
+        - python app.py
   artifacts:
     baseDirectory: build
     files:
       - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
