--- a/amplify.yml
+++ b/amplify.yml
@@ -1,10 +1,16 @@
 version: 1
 frontend:
   phases:
-    postBuild:
+    preBuild:
       commands:
-        - python app.py
+        - npm install
+    build:
+      commands:
+        - npm run build
   artifacts:
     baseDirectory: build
     files:
       - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
